Fix race condition during startup and scene sync
Sort schedules by name during the initial schedule. This fixes some strange issues during tests and should provide better logs.